Fix issue with pseudo element on inputs being visible before selection

--- a/app/app.css
+++ b/app/app.css
@@ -44,7 +44,7 @@
     background-color: var(--color-accent);
     border-radius: calc(var(--spacing) * 2.5);
     transition: all var(--default-transition-duration) ease-in-out;
-    transform: scale(90%);
+    transform: scale(85%);
   }
 
   .blur-up,
